--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"language": "RU.json", "version": "0.0.1.12092020-beta"}
+{"language": "RU.json", "version": "0.2.030121-beta", "window": [700, 130], "eat-dir": "DISH"}
