--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"language": "RU.json", "version": "0.2.060121-beta", "window": [700, 130], "eat-dir": "DISH"}
+{"language": "RU.json", "version": "0.2.060121-beta", "eat-dir": "DISH"}
