--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"language": "ru-rus.json", "version": "0.2.100121-beta", "eat-dir": "\u041c\u0438\u0441\u043a\u0430"}
+{"language": "ru-rus.json", "version": "0.2.170121-beta", "version-api": 2170121, "url": "", "eat-dir": "\u041c\u0438\u0441\u043a\u0430"}
