--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"language": "ru-rus.json", "version": "0.2.190121-beta", "version-api": 2190121, "url": "https://raw.githubusercontent.com/romanin-rf/FileCat/master/update_api.json", "eat-dir": "\u041c\u0438\u0441\u043a\u0430"}
+{"language": "ru-rus.json", "version": "0.2.230121-beta", "version-api": 2390121, "url": "https://raw.githubusercontent.com/romanin-rf/FileCat/master/update_api.json", "last-check-update": [23, 1, 2021, 21, 31], "eat-dir": "\u041c\u0438\u0441\u043a\u0430"}
